@@ -31,6 +31,7 @@ extern "C" {
 #include <sys/types.h>
 #include <sys/stat.h>
 
+#include <fcntl.h>
 #include <signal.h>
 #include <unistd.h>
 }
@@ -220,6 +221,17 @@ config_to_args(const atf::tests::vars_map& config)
 
 static
 void
+silence_stdin(void)
+{
+    ::close(STDIN_FILENO);
+    int fd = ::open("/dev/null", O_RDONLY);
+    if (fd == -1)
+        throw std::runtime_error("Could not open /dev/null");
+    INV(fd == STDIN_FILENO);
+}
+
+static
+void
 prepare_child(const atf::fs::path& workdir)
 {
     const int ret = ::setpgid(::getpid(), 0);
@@ -244,6 +256,8 @@ prepare_child(const atf::fs::path& workdir)
     atf::env::set("__RUNNING_INSIDE_ATF_RUN", "internal-yes-value");
 
     impl::change_directory(workdir);
+
+    silence_stdin();
 }
 
 static
